erDiagram
    USUARIOS ||--o{ CATEGORIAS : "crea"
    USUARIOS ||--o{ CUENTAS : "posee"
    USUARIOS ||--o{ TRANSACCIONES : "registra"
    USUARIOS ||--o{ METAS_AHORRO : "establece"

    CATEGORIAS ||--o{ TRANSACCIONES : "clasifica"

    METAS_AHORRO ||--o{ APORTACIONES :"tiene"

    
    USUARIOS {
        int idUsuario PK "Identificador único"
        varchar username UK "Nombre de usuario"
        varchar email UK "Correo electrónico único"
        varchar password "Contraseña encriptada"
        boolean activo "Estado de la cuenta"
    }
    
    CATEGORIAS {
        int idCategoria PK "Identificador único"
        int idUsuario FK "Usuario propietario"
        varchar nombre "Nombre de la categoría"
        enum tipo "ingreso o gasto"
        text descripcion "Descripción detallada"
        varchar color "Color en hexadecimal"
        enum icono "Nombre del icono"
        boolean activa "Soft delete"
    }
    
    CUENTAS {
        int idCuenta PK "Identificador único"
        int id_Usuario FK "Usuario propietario"
        varchar nombre "Nombre de la cuenta"
        enum tipo "efectivo banco tarjeta ahorro"
        decimal saldo_inicial "Saldo al crear cuenta"
        decimal saldo_actual "Saldo actualizado"
        enum moneda "Código de moneda"
        boolean activa "Estado de la cuenta 
        (Se puede usar en soft delete)"
        datetime fecha_creacion "Fecha de creación"
    }
    
    TRANSACCIONES {
        int idTransaccion PK "Identificador único"
        int idUsuario FK "Usuario propietario"
        int idCuenta FK "Cuenta asociada"
        int idCategoria FK "Categoría de transacción"
        decimal monto "Cantidad de dinero"
        text descripcion "Descripción breve"
        date fecha "Fecha de la transacción"
        text notas "Notas adicionales"
        date fechaCreacion "Fecha de creacion de la transaccion"
        date fechaActualizacion "Fecha de actualizacion de la transaccion"  
    }

    
    METAS_AHORRO {
        int idMeta PK "Identificador único"
        int idUsuario FK "Usuario propietario"
        varchar nombre "Nombre de la meta"
        text descripcion "Descripción de la meta"
        decimal monto_objetivo "Cantidad a alcanzar"
        decimal monto_actual "Cantidad ahorrada"
        date fecha_inicio "Inicio de la meta"
        date fecha_limite "Fecha límite opcional"
        boolean completada "Estado de completitud"
    }

    APORTACIONES{
        int idAportacion PK "Identificador unico"
        int idMeta FK "Meta que recibe la aportacion"
        varchar descripcion "Titulo del aporte"
        decimal monto "Cantidad de dinero aportado"
        enum metodo "Deposito, transaccion ..."
        date fechaAporte "Fecha de realizacion del aporte"
    }